--- a/_posts/2021-08-20-4pMA.html
+++ b/_posts/2021-08-20-4pMA.html
@@ -9,19 +9,15 @@ gallery:
 - image_path: "/assets/img/posts/4pMA.jpg" 
   title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی| کوفۀ کهن: مرور پیشینۀ مطالعات" 
  
-excerpt: یرگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی
-کوفۀ کهن: مرور پیشینۀ مطالعات| سمیرا جلایری
-استاد راهنما: دکتر محمدغلامعلی فلاح
-داوران: دکتر زهره تفضّلی، دکتر مهنام نجفی
-زمان: شنبه ۳۰ مرداد ۱۴۰۰، ساعت ۱۴ 
+excerpt: این پایان‌نامه مرورِ انتقادیِ آراءِ دانشوران و محققان نوین دربارۀ شکل‌گیری کوفۀ کهن (در قرن اول اسلامی) است. آثار تمامی مورخان، جغرافی‌‌نویسان، معماران و شهرسازانی که از کوفه مطلبی بیان کرده‌اند مطالعه و نظرات آنها احصا شده است. در میان آراء پژوهشگران دربارۀ برخی از مشخصات و ویژگی‌های کوفه اختلاف‌نظرهایی در خصوص سال ساخت، طراحی و تخطیط، شکل و ساختارِ شهر، علتِ شکل‌گیری، بناهای مهم از جمله مسجد و دارالاماره وجود دارد. 
 --- 
-<p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
-<p>کوفۀ کهن: مرور پیشینۀ مطالعات| سمیرا جلایری</p>
-<p>استاد راهنما: دکتر محمدغلامعلی فلاح</p>
-<p>داوران: دکتر زهره تفضّلی، دکتر مهنام نجفی</p>
-<p>زمان: شنبه ۳۰ مرداد ۱۴۰۰، ساعت ۱۴</p>
-<p>&nbsp;</p>
-<p>این پایان&zwnj;نامه مرورِ انتقادیِ آراءِ دانشوران و محققان نوین دربارۀ شکل&zwnj;گیری کوفۀ کهن (در قرن اول اسلامی) است. آثار تمامی مورخان، جغرافی&zwnj;&zwnj;نویسان، معماران و شهرسازانی که از کوفه مطلبی بیان کرده&zwnj;اند مطالعه و نظرات آنها احصا شده است. در میان آراء پژوهشگران دربارۀ برخی از مشخصات و ویژگی&zwnj;های کوفه اختلاف&zwnj;نظرهایی در خصوص سال ساخت، طراحی و تخطیط، شکل و ساختارِ شهر، علتِ شکل&zwnj;گیری، بناهای مهم از جمله مسجد و دارالاماره وجود دارد. هدف این پژوهش بررسی علل و جستجوی ریشۀ این اختلاف&zwnj;نظرهاست. مهم&zwnj;ترین علل این اختلاف&zwnj;نظرها را می&zwnj;توان غفلت از برخی منابعِ کهن، نوع برداشت از منابع، عدم توجه به گزارش&zwnj;های باستان&zwnj;شناسی، عدم بررسی تحلیلی&zwnj;-&zwnj;تفسیری گزارش&zwnj;ها و نقل&zwnj;های مربوط به کوفه، عدم خوانش تمام منابع و ... دانست. این پژوهش تلاش دارد با تکیه &zwnj;بر گزارش&zwnj;&zwnj;های باستان&zwnj;شناسی، تحلیلِ روایاتِ تاریخی و مقایسۀ منابع منشأ این اختلاف&zwnj;ها را شناسایی کند. آثار شرق&zwnj;شناسان متقدم چون ماسینیون، کرسول و محققان عرب چون جعیط، الجنابی، الصیاد و گزارش باستان&zwnj;شناسی از محمدعلی مصطفی و سایر نویسندگان بررسی می&zwnj;&zwnj;شود.</p>
-<p>&nbsp;</p>
-<p>🔸از این پیوند می&zwnj;توانید از طریق برنامۀ ادوبی کانکت به صورت مهمان در جلسه شرکت کنید:</p>
-<p>http://194.225.24.96/defa-memari-4</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">کوفۀ کهن: مرور پیشینۀ مطالعات| سمیرا جلایری</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">استاد راهنما: دکتر محمدغلامعلی فلاح</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">داوران: دکتر زهره تفضّلی، دکتر مهنام نجفی</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">زمان: شنبه ۳۰ مرداد ۱۴۰۰، ساعت ۱۴</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">این پایان&zwnj;نامه مرورِ انتقادیِ آراءِ دانشوران و محققان نوین دربارۀ شکل&zwnj;گیری کوفۀ کهن (در قرن اول اسلامی) است. آثار تمامی مورخان، جغرافی&zwnj;&zwnj;نویسان، معماران و شهرسازانی که از کوفه مطلبی بیان کرده&zwnj;اند مطالعه و نظرات آنها احصا شده است. در میان آراء پژوهشگران دربارۀ برخی از مشخصات و ویژگی&zwnj;های کوفه اختلاف&zwnj;نظرهایی در خصوص سال ساخت، طراحی و تخطیط، شکل و ساختارِ شهر، علتِ شکل&zwnj;گیری، بناهای مهم از جمله مسجد و دارالاماره وجود دارد. هدف این پژوهش بررسی علل و جستجوی ریشۀ این اختلاف&zwnj;نظرهاست. مهم&zwnj;ترین علل این اختلاف&zwnj;نظرها را می&zwnj;توان غفلت از برخی منابعِ کهن، نوع برداشت از منابع، عدم توجه به گزارش&zwnj;های باستان&zwnj;شناسی، عدم بررسی تحلیلی&zwnj;-&zwnj;تفسیری گزارش&zwnj;ها و نقل&zwnj;های مربوط به کوفه، عدم خوانش تمام منابع و ... دانست. این پژوهش تلاش دارد با تکیه &zwnj;بر گزارش&zwnj;&zwnj;های باستان&zwnj;شناسی، تحلیلِ روایاتِ تاریخی و مقایسۀ منابع منشأ این اختلاف&zwnj;ها را شناسایی کند. آثار شرق&zwnj;شناسان متقدم چون ماسینیون، کرسول و محققان عرب چون جعیط، الجنابی، الصیاد و گزارش باستان&zwnj;شناسی از محمدعلی مصطفی و سایر نویسندگان بررسی می&zwnj;&zwnj;شود.</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">&nbsp;</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">🔸از این پیوند می&zwnj;توانید از طریق برنامۀ ادوبی کانکت به صورت مهمان در جلسه شرکت کنید:</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; text-align: justify; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff;">http://194.225.24.96/defa-memari-4</p>
