--- a/_posts/2021-05-18-QEnZ.html
+++ b/_posts/2021-05-18-QEnZ.html
@@ -5,6 +5,7 @@ types: news
 tags: میزگرد,تاریخ شفاهی,تاریخ معماری,نظریه,سیاست,روش 
 featured: false
 slug: QEnZ 
+excerpt: This roundtable considers one compelling method for addressing this need: oral history and other interview-based approaches. Oral history uniquely can bring subjectivities of the user into analysis of designed forms, incorporating the perspectives and experiences of those traditionally absent, if not excluded, from historical accounts. 
 --- 
 <p>برگزاری میزگرد مجازی: &laquo;تاریخ شفاهی و تاریخ معماری: نظریه، سیاست&zwnj;، روش&raquo;</p>
 <p>&nbsp;</p>
