--- a/_posts/2021-05-20-k3Zc.html
+++ b/_posts/2021-05-20-k3Zc.html
@@ -5,7 +5,7 @@ types: news
 tags: سخنرانی,وضوخانه,مسجد,شرق,دوران میانه 
 featured: false
 slug: k3Zc 
-excerpt: ضوخانه‌ها تا کنون به ندرت مورد توجه باستان‌شناسان و مورخان معماری قرار گرفته است. این ساخته‌ها، که خودْ ملحقه‌ای به بناهای مذهبی، با ذکری حرام انگاشته، و گاهی به اشتباه شناسایی شده بودند به دشواری در دسترس مطالعه قرار میٰ‌گیرند زیرا از گذشته و هم‌اکنون (در مورد بناهایی که هنوز در کارند)  این بناها تحت مرمت‌ها و بازسازی‌های بی‌شمار بوده است. برای مشارکت در مطالعۀ این گونه‌ها، [در این سخنرانی] به نمونۀ شهر صور در ارتباط با نمونه‌های دیگر از سده‌های میانۀ خاورمیانه پرداخته می‌شود. 
+excerpt: وضوخانه‌ها تا کنون به ندرت مورد توجه باستان‌شناسان و مورخان معماری قرار گرفته است. این ساخته‌ها، که خودْ ملحقه‌ای به بناهای مذهبی، با ذکری حرام انگاشته، و گاهی به اشتباه شناسایی شده بودند به دشواری در دسترس مطالعه قرار میٰ‌گیرند زیرا از گذشته و هم‌اکنون (در مورد بناهایی که هنوز در کارند)  این بناها تحت مرمت‌ها و بازسازی‌های بی‌شمار بوده است. برای مشارکت در مطالعۀ این گونه‌ها، [در این سخنرانی] به نمونۀ شهر صور در ارتباط با نمونه‌های دیگر از سده‌های میانۀ خاورمیانه پرداخته می‌شود. 
 --- 
 <p>برگزاری سخنرانی مجازی: &laquo;وضوخانه&zwnj;های مساجد در شرق نزدیک دوران میانه&raquo;</p>
 <p>&nbsp;</p>
