--- a/_posts/2021-10-04-F9sN.html
+++ b/_posts/2021-10-04-F9sN.html
@@ -10,6 +10,11 @@ gallery:
 - image_path: "/assets/img/posts/F9sN.jpg" 
   title: "برگزاری سخنرانی مجازی: «گفتگویی دربارهٔ عکاسی شرق‌شناسانه/ A Talk on Orientalist Photography»" 
  
+excerpt: سخنرانان: جولیا مارتینی، ماتیلد فالگیر، آلیزه الکساندر
+
+- زمان: ۴ اکتبر ۲۰۲۱|۱۲ مهر ۱۴۰۰
+
+- میزبان: کتابخانهٔ ملی قطر 
 --- 
 <p>سخنرانان: جولیا مارتینی، ماتیلد فالگیر، آلیزه الکساندر</p>
 <p>- زمان: ۴ اکتبر ۲۰۲۱|۱۲ مهر ۱۴۰۰</p>
