--- a/_posts/2021-09-28-drv5.html
+++ b/_posts/2021-09-28-drv5.html
@@ -2,6 +2,7 @@
 title: "برگزاری هفتمین همایش بین‌المللی شمس و مولانا (مجازی)" 
 authors: asmaneh 
 types: news 
+tags: همایش,شمس,مولانا, مؤسسهٔ تولیت شمس تبریزی 
 featured: false
 featureImg: "/assets/img/posts/drv5.jpg" 
 slug: drv5 
