--- a/_posts/2021-09-21-jP7J.html
+++ b/_posts/2021-09-21-jP7J.html
@@ -2,6 +2,7 @@
 title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد| شیوۀ هم‌نشینی خانه‌ها در روستای کوخرد، بستک| سعیده جوقه‌سالار" 
 authors: asmaneh 
 types: news 
+tags: دفاع,کارشناسی ارشد,مطالعات معماری,بستک,کوخرد,هم‌نشینی,سعیده جوقه‌سالار 
 featured: false
 featureImg: "/assets/img/posts/jP7J.jpg" 
 slug: jP7J 
@@ -9,6 +10,7 @@ gallery:
 - image_path: "/assets/img/posts/jP7J.jpg" 
   title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد| شیوۀ هم‌نشینی خانه‌ها در روستای کوخرد، بستک| سعیده جوقه‌سالار" 
  
+excerpt: روستای کوخرد از قدیم‌ترین روستاهای شهرستان بستک در استان هرمزگان است. خانه‌های این روستا، که در ابتدا در بافتی متراکم و فشرده استقرار یافته بودند، به تدریج و با گسترش روستا از یکدیگر فاصله گرفتند و صورتی پراکنده به بافت مسکونی روستا بخشیدند که با هستۀ اولیۀ آن تفاوت دارد. در این تحقیق این پرسش را مطرح کرده‌ایم که در دوره‌های مختلف تاریخ روستا خانه‌ها چه شیوه‌هایی از هم‌نشینی را برگزیدند و چه عواملی موجب تفاوت در کیفیت هم‌نشینی آنها شده است؟ 
 --- 
 <ul style="list-style-type: circle;">
 <li style="text-align: justify;">برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</li>
