--- a/_posts/2021-09-22-FQkk.html
+++ b/_posts/2021-09-22-FQkk.html
@@ -2,6 +2,7 @@
 title: "نخستین یادبود سیدمحسن حبیبی" 
 authors: asmaneh 
 types: news 
+tags: یادبود,سید محسن حبیبی 
 featured: false
 featureImg: "/assets/img/posts/FQkk.jpg" 
 slug: FQkk 
@@ -9,6 +10,9 @@ gallery:
 - image_path: "/assets/img/posts/FQkk.jpg" 
   title: "نخستین یادبود سیدمحسن حبیبی" 
  
+excerpt: سخنرانان: منوچهر طبیبیان، علی مدنی‌پور، زهرا اهری، ناصر فکوهی، اسکندر مختاری، علی مدرس
+زمان: یکشنبه ۴ مهر ۱۴۰۰، ساعت ۱۹
+برگزارکننده: خانوادۀ حبیبی 
 --- 
 <ul style="list-style-type: square;">
 <li>سخنرانان: منوچهر طبیبیان، علی مدنی&zwnj;پور، زهرا اهری، ناصر فکوهی، اسکندر مختاری، علی مدرس</li>
