--- a/_posts/2021-09-28-drv5.html
+++ b/_posts/2021-09-28-drv5.html
@@ -10,6 +10,9 @@ gallery:
 - image_path: "/assets/img/posts/drv5.jpg" 
   title: "برگزاری هفتمین همایش بین‌المللی شمس و مولانا (مجازی)" 
  
+excerpt: برگزارکننده: مؤسسهٔ تولیت شمس تبریزی
+
+زمان: ۱۰ تا ۱۲ مهر ۱۴۰۰ 
 --- 
 <p>برگزارکننده: مؤسسهٔ تولیت شمس تبریزی</p>
 <p>زمان: ۱۰ تا ۱۲ مهر ۱۴۰۰</p>
