--- a/_posts/2021-01-02-kQuQ.html
+++ b/_posts/2021-01-02-kQuQ.html
@@ -11,7 +11,7 @@ gallery:
   title: "برگزاری همایش: «سنت‌های اسلامی در خراسان بزرگ: اسماعیلی‌ها، صوفیان و سنی‌ها»" 
  
 --- 
-<p>برگزاری همایش: &laquo;سنت&zwnj;های اسلامی در خراسان بزرگ: اسماعیلی&zwnj;ها، صوفیان و سنی&zwnj;ها&raquo;</p>
+<p><strong>برگزاری همایش: &laquo;سنت&zwnj;های اسلامی در خراسان بزرگ: اسماعیلی&zwnj;ها، صوفیان و سنی&zwnj;ها&raquo;</strong></p>
 <p>برگزارکننده: مؤسسهٔ مطالعات اسماعیلیان</p>
 <p>زمان: ۲۴ تا ۲۷ فوریه ۲۰۲۱| ۶ تا ۹ اسفند ۱۳۹۹</p>
 <p>&nbsp;</p>
