--- a/_posts/2020-11-15-cFTb.html
+++ b/_posts/2020-11-15-cFTb.html
@@ -5,6 +5,7 @@ types: news
 tags: فراخوان,همایش,مسجد 
 featured: false
 slug: cFTb 
+excerpt: Ithra and Abdullatif Al Fozan are announcing an open call for research submissions on innovative approaches towards the study of mosques through objects. This is an open call for architects, designers, archeologists, artists, writers, historians and curators to present original research, objects or insights about mosques and mosque-related cultural objects. 
 --- 
 <p><strong>فراخوان شرکت در همایش &laquo;مسجد: ابداع جسم، صورت، کارکرد&raquo;</strong></p>
 <p>مهلت ارسال چکیده: ۲۸ دسامبر ۲۰۲۰| ۸ دی ۱۳۹۹</p>
