--- a/_posts/2021-10-04-F9sN.html
+++ b/_posts/2021-10-04-F9sN.html
@@ -1,23 +1,4 @@
 --- 
-title: "برگزاری سخنرانی مجازی: «گفتگویی دربارهٔ عکاسی شرق‌شناسانه/ A Talk on Orientalist Photography»" 
-authors: asmaneh 
-types: news 
-tags: عکاسی,تاریخ عکاسی,شرق‌شناسی,شرق‌شناسانه,تاریخ هنر اسلامی 
-featured: false
-featureImg: "/assets/img/posts/F9sN.jpg" 
-slug: F9sN 
-gallery: 
-- image_path: "/assets/img/posts/F9sN.jpg" 
-  title: "برگزاری سخنرانی مجازی: «گفتگویی دربارهٔ عکاسی شرق‌شناسانه/ A Talk on Orientalist Photography»" 
- 
-excerpt: سخنرانان: جولیا مارتینی، ماتیلد فالگیر، آلیزه الکساندر
-
-- زمان: ۴ اکتبر ۲۰۲۱|۱۲ مهر ۱۴۰۰
-
-- میزبان: کتابخانهٔ ملی قطر 
+published: false 
 --- 
-<p>سخنرانان: جولیا مارتینی، ماتیلد فالگیر، آلیزه الکساندر</p>
-<p>- زمان: ۴ اکتبر ۲۰۲۱|۱۲ مهر ۱۴۰۰</p>
-<p>- میزبان: کتابخانهٔ ملی قطر</p>
-<p>- ثبت&zwnj;نام: <a href="https://events.qnl.qa/attend/nKPY5" target="_blank" rel="noopener">https://events.qnl.qa/attend/nKPY5</a></p>
-<p>- اطلاعات بیشتر: <a href="https://events.qnl.qa/event/nKPY5/EN" target="_blank" rel="noopener">https://events.qnl.qa/event/nKPY5/EN</a></p>
+  
