--- a/_posts/2021-09-22-FQkk.html
+++ b/_posts/2021-09-22-FQkk.html
@@ -1,20 +1,4 @@
 --- 
-title: "نخستین یادبود سیدمحسن حبیبی" 
-authors: asmaneh 
-types: news 
-tags: یادبود,سید محسن حبیبی 
-featured: false
-featureImg: "/assets/img/posts/FQkk.jpg" 
-slug: FQkk 
-gallery: 
-- image_path: "/assets/img/posts/FQkk.jpg" 
-  title: "نخستین یادبود سیدمحسن حبیبی" 
- 
-excerpt: سخنرانان: منوچهر طبیبیان، علی مدنی‌پور، زهرا اهری، ناصر فکوهی، اسکندر مختاری، علی مدرس 
+published: false 
 --- 
-<ul style="list-style-type: square;">
-<li>سخنرانان: منوچهر طبیبیان، علی مدنی&zwnj;پور، زهرا اهری، ناصر فکوهی، اسکندر مختاری، علی مدرس</li>
-<li>زمان: یکشنبه ۴ مهر ۱۴۰۰، ساعت ۱۹</li>
-<li>برگزارکننده: خانوادۀ حبیبی</li>
-<li>این جلسه از طریق اسکای&zwnj;روم برگزار می&zwnj;شود، نشانی: <a href="https://www.skyroom.online/ch/farhangh/dr-habibi" target="_blank" rel="noopener">https://www.skyroom.online/ch/farhangh/dr-habibi</a></li>
-</ul>
+  
