--- a/_posts/2021-08-10-pai6.html
+++ b/_posts/2021-08-10-pai6.html
@@ -1,6 +1,6 @@
 --- 
 title: "سفر به شرق ایران فرهنگی، کابلستان" 
-authors: asmaneh 
+authors: کورش محمدخانی 
 types: blog 
 tags: سفر,افغانستان,کابلستان,کابل,باستان‌شناسی 
 featured: false
@@ -24,11 +24,7 @@ gallery:
 - image_path: "/assets/img/posts/pai6-7.jpg" 
   title: "" 
  
-excerpt: با جدا شدن بخش شرقی ایران فرهنگی در دورهٔ قاجار، قسمتی از جان ایران زمین جدا ماند. سرزمین زیبا که در دورهٔ امان الله خان افغانستان نامیده شد، امروزه سرزمینی است با مصیبت های فراوان و در طی پنج دهه جنگ، جدا از ویژگی‌های طبیعی بسیار زیبا، به سرزمینی غمگینی تبدیل شده است. 
 --- 
-<p><strong>سفر به شرق ایران فرهنگی، کابلستان</strong></p>
-<p>کورش محمدخانی</p>
-<p>&nbsp;</p>
 <p>با جدا شدن بخش شرقی ایران فرهنگی در دورهٔ قاجار، قسمتی از جان ایران زمین جدا ماند. سرزمین زیبا که در دورهٔ امان الله خان افغانستان نامیده شد، امروزه سرزمینی است با مصیبت های فراوان و در طی پنج دهه جنگ، جدا از ویژگی&zwnj;های طبیعی بسیار زیبا، به سرزمینی غمگینی تبدیل شده است.</p>
 <p>همواره عشق و علاقه من به سرزمین ایران مرا به ایران فرهنگی می&zwnj;کشاند، سرزمینی که روزی از چین تا دانوب و از شمال دریای کاسپین تا جنوب خلیج فارس را در بر می&zwnj;گرفت و تا شمال افریقا گسترش می&zwnj;یافت. همواره علاقه داشتم که در این پهنهٔ ایران فرهنگی، تلاشی بر بازشناسی هویت آن کنم. در مارس ۲۰۱۱ به سبب تخصص و تحصیلات در دانشگاه سوربن و پس از آن لیون فرانسه، همراهی و همکاری با تیم مشترک فرانسه، سوریه، لبنان، مرا به شمال سوریه و سرزمین میان&zwnj;رودان کشانید. محوطهٔ بسیار زیبای سیروس در نزدیکی مرز ترکیه در خاک سوریه. اما شعلهٔ جنگ دقیقاً در همان روزها از درعا در جنوب سوریه آغاز شد و من که رفته بودم سالیان سال در شمال میان&zwnj;رودان فعالیت علمی داشته باشم تنها سه هفته در آن خاک ماندم و دیدید آنچه امروز بر این خاک این سرزمین گذشت.</p>
 <p>سال ۲۰۱۵ همکار و دوست عزیزم دکتر سباستین گندت که از سال ۲۰۰۳ با هم همراه و همکار هستیم، به دلیل عدم امکان رفتن به کشور افغانستان، از طرف مرکز ملی پژوهش&zwnj;های علمی فرانسه (CNRS) به خاطر خطرات فراوان از طرف طالبان برای اتباع اروپایی در آن زمان، به من پیشنهاد داد که با هیئت باستان&zwnj;شناسی فرانسه در افغانستان (DAFA) همکاری نمایم.&nbsp; پس از تماس مدیر این هیئت دکتر خولیو بندوزو برای انجام بررسی&zwnj;های مغناطیس&zwnj;سنجی در محوطه&zwnj;های باستانی افغانستان و موافقت من، برای انجام این بررسی&zwnj;ها برنامه&zwnj;ریزی گردید، اما حملات طالبان و عدم امنیت باعث شد که بعد از نزدیک به صد سال فعالیت، هیئت باستان&zwnj;شناسی فرانسه در افغانستان از کابل به عشق آباد نقل&zwnj;مکان کند و برنامه ما ملغی شود.</p>
