--- a/_posts/2021-10-08-pUAU.html
+++ b/_posts/2021-10-08-pUAU.html
@@ -1,34 +1,4 @@
 --- 
-title: "برگزاری همایش سالانۀ «معنای ایران» به صورت مجازی" 
-authors: asmaneh 
-types: news 
-tags: همایش,ایران 
-featured: false
-slug: pUAU 
-excerpt: در این دوره، مراد از ایران چیست؟ آیا می‌توانیم نحوۀ نگاه مردمان آن عصر به سنت‌ها و محیط (طبیعی یا مصنوع) را از هم تمیز دهیم؟ دیدگاه خارجیان چه بود؟ و  دانش جدید چگونه جنبه‌های ویژۀ این دوره را تعریف کرده است؟ اینها بعضی از پرسش‌هایی است که امیدواریم در این همایش به آن بپردازیم؛ همایشی که به این دورۀ پیچیده و دشوار اختصاص دارد که در آن ایران حضوری کوتاه در نظم دنیای جدید داشت. 
+published: false 
 --- 
-<p><strong>برگزاری همایش سالانۀ &laquo;معنای ایران&raquo; به صورت مجازی</strong></p>
-<p>موضوع: ایران در گذار به نظم دنیای جدید</p>
-<p>میزبان: مرکز مطالعات ایرانی مدرسۀ مطالعات شرقی و افریقایی دانشگاه لندن</p>
-<p>تاریخ برگزاری: ۲۸ نوامبر ۲۰۲۰| ۸ آذر ۱۳۹۹</p>
-<p>&nbsp;</p>
-<p>▪️The Idea of Iran: Iran in Transition to a New World Order</p>
-<p>▫️Organiser: Centre for Iranian Studies, SOAS and the Shahnama Centre for Persian Studies, Pembroke College, University of Cambridge.</p>
-<p>▫️Date: 28 November 2020|Time: 11:45 AM</p>
-<p>&nbsp;</p>
-<p>در سدۀ هجدهم، حکومت صفویان فروپاشید؛ [حکومتی] که همراه با دوره&zwnj;ای طولانی از صلح و ثبات و رشد نسبی، رو در رویی&zwnj;هایی نزدیک&zwnj;تر با اروپاییان، و توجه اروپاییان&nbsp; به ایران بود. سده&zwnj;های بعدی، متضمن گستره&zwnj;ای آشفته از تجزیه و احیا، رکود، توسعه و رقابت سلسله&zwnj;ها بود؛ به طوری که مبارزه بر سر قدرت در میان نادر و افشاریان در شرق، زندیان در جنوب، در جریان بود و در نهایت به پیروزی قاجاریان در شمال رسید. همۀ این وقایع در زمانی رخ داد که در اروپا نیز تغییرات اساسی، هم سیاسی و هم اقتصادی، در جریان بود. [از جمله] انقلاب&zwnj;های صنعتی و کشاورزی و انقلاب فرانسه و تهدید&nbsp; ماندگارِ اقتدارگراییِ رژیم&zwnj;های کهن. به خاطر ناامنیِ رایج،&nbsp; مسافران و تجار از ایران فاصله گرفتند و نظرشان بیش از همیشه به هند جلب شد. هنگامی که ایران از انزوای خصوصی خارج شد، به دنیایی جدید قدم گذاشت که تحت تسلط قدرت&zwnj;های اروپایی بود. یکی از پیامدهای فراوان آن، از دست دادنِ بی&zwnj;رحمانۀ مرزها در شمال و شرق بود که در پایان آن، مرزهای کنونی ایران پدید آمد. از آنجا که معمولاً پایان سدۀ هجدهم را، هم&zwnj;چون دورۀ پس&zwnj;رفت و افول می&zwnj;پندارند، تعجبی ندارد که این دوره هنوز به خوبی مطالعه نشده و دستاوردهای هنری و علمی و توسعه&zwnj;های اجتماعی-اقتصادی آن مغفول مانده است. با بنیانِ سلسلۀ نسبتاُ باثباتِ قاجاریه از سال ۱۷۹۷، آسان می&zwnj;نمود که به دنیای صفویان، به منزلۀ عصر طلایی نگریست و همۀ پیشرفت&zwnj;های بعدی را در ریشه&zwnj;های صفوی&zwnj;شان جست.</p>
-<p>در این دوره، مراد از ایران چیست؟ آیا می&zwnj;توانیم نحوۀ نگاه مردمان آن عصر به سنت&zwnj;ها و محیط (طبیعی یا مصنوع) را از هم تمیز دهیم؟ دیدگاه خارجیان چه بود؟ و&nbsp; دانش جدید چگونه جنبه&zwnj;های ویژۀ این دوره را تعریف کرده است؟ اینها بعضی از پرسش&zwnj;هایی است که امیدواریم در این همایش به آن بپردازیم؛ همایشی که به این دورۀ پیچیده و دشوار اختصاص دارد که در آن ایران حضوری کوتاه در نظم دنیای جدید داشت.</p>
-<p>&nbsp;</p>
-<p>▫️فهرست سخنرانان:</p>
-<p>- Firuza Abdullaeva, University of Cambridge</p>
-<p>- Assef Ashraf, University of Cambridge</p>
-<p>- Kevin Gledhill, Yale University</p>
-<p>- Kianoosh Motaghedi, Artist and Islamic Art researcher</p>
-<p>- Sajjad Nejatie, University of Toronto</p>
-<p>- Janet O&rsquo;Brien, The Courtauld Institute of Art</p>
-<p>- John Perry, University of Chicago</p>
-<p>- Fatema Soudavar Farmanfarmaian, Soudavar Memorial Foundation</p>
-<p>- Ernest Tucker, US Naval Academy</p>
-<p>&nbsp;</p>
-<p>اطلاعات بیشتر:</p>
-<p dir="ltr">https://www.soas.ac.uk/smei-cis/events/idea-of-iran/28nov2020-the-idea-of-iran-iran-in-transition-to-a-new-world-order.html</p>
+  
