--- a/_posts/2021-07-21-fqSk.html
+++ b/_posts/2021-07-21-fqSk.html
@@ -1,14 +1,4 @@
 --- 
-title: "" 
-authors: asmaneh 
-types: news 
-featured: false
-slug: fqSk 
+published: false 
 --- 
-<p>فراخوان ارسال مقاله برای دوفصلنامۀ علمی مطالعات معماری ایران</p>
-<p>&nbsp;</p>
-<p>بر اساس آیین&zwnj;نامۀ جدید نشریات علمی، امکان انتشار انواع مقالات علمی اعم از مقاله پژوهشی، ترویجی، مروری، کوتاه، نقطه&zwnj;نظر، گزارش&zwnj;های علمی و یادداشت&zwnj;های فنی برای نشریات فراهم شده است. از این رو و به منظور افزایش همکاری&zwnj;های علمی و معرفی دستاوردها و یافته&zwnj;های پژوهشگران در زمینۀ معماری ایرانی، نشریۀ علمی &laquo;مطالعات معماری ایران&raquo;، ضمن دعوت از استادان، اندیشمندان و پژوهشگران معماری ایران، از دریافت و انتشار مقالات نو و بدیع این حوزه استقبال می&zwnj;کند.</p>
-<p>لازم به ذکر است که تمامی مقالات مرتبط با اهداف، زمینه&zwnj;ها و محورهای نشریه، در فرایند داوری قرار خواهند گرفت و پذیرش مقالات منوط به نظر نهایی داوران علمی و هیئت تحریریه خواهد بود.</p>
-<p>&nbsp;</p>
-<p>علاقه&zwnj;مندان می&zwnj;توانند مقالات خود را از طریق وبگاه نشریه ارسال کنند:</p>
-<p dir="ltr">https://jias.kashanu.ac.ir/</p>
+  
