--- a/_posts/2021-08-27-vRhK.html
+++ b/_posts/2021-08-27-vRhK.html
@@ -1,24 +1,4 @@
 --- 
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران| تاریخچۀ کوچۀ لولاگر تهران" 
-authors: asmaneh 
-types: news 
-featured: false
-slug: vRhK 
-gallery: 
-- image_path: "/assets/img/posts/vRhK-1.jpg" 
-  title: "" 
- 
+published: false 
 --- 
-<p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
-<p>تاریخچۀ کوچۀ لولاگر تهران| زهرا آل&zwnj;احمد</p>
-<p>استاد راهنما: دکتر زهره تفضّلی</p>
-<p>استاد مشاور: لیلا قاسمی</p>
-<p>داوران: دکتر زهرا اهری، دکتر عاطفه کرباسی</p>
-<p>زمان: شنبه ۶ شهریور ۱۴۰۰، ساعت ۱۰ صبح</p>
-<p>&nbsp;</p>
-<p>کوچۀ لولاگر از کوچه&zwnj;های قدیمی شهر است. این کوچه و بناهای آن در سال ۱۳۱۷، به همت دو برادر، محمدبـاقر و علی&zwnj;اکبر لولاگر، در زمینی بزرگ در محلۀ حسن&zwnj;آباد در شمال شهر طهران ساخته شد. تحقیق حاضر به معرفی کوچۀ لولاگر می&zwnj;پردازد و شکل&zwnj;گیری و تغییرات آن را از ابتدای ساخت تـا پایان دورۀ پهلوی روایت می&zwnj;کند. به همین منظور با بهره&zwnj;گیری از راهبرد تاریخی، اطلاعـات و شواهدی از کالبد بناها، منابع درجه اول همچون اسناد و تصاویر، منابع درجۀ دوم، مصاحبه جمع&zwnj;آوری و تفسیر شده است تا بتوان تاریخچۀ کوچۀ لولاگر را روایت کرد.</p>
-<p>کوچه لولاگر، کوچه&zwnj;ای دردار است که در هر طرف آن سه عمارت ساخته شده و عمارت&zwnj;های رو&zwnj;بـه&zwnj;رو دو به دو با هم قرینه&zwnj;اند. برادران لولاگر که زمین کوچه را به قصد سرمایه&zwnj;گذاری برای تجارت مشترکشان خریده بودند، آن را به دو نیمه با معبری در میان تقسیم کردند و شش عمارت در آن ساختند. در نهایت اما پایان شراکت دو برادر به تفکیک کوچه منجر شد. نیمۀ شرقی بـه علی&zwnj;اکبر لولاگر و نیمۀ غربی به محمدباقر لولاگر رسید. کالبد بناهای کوچه در طول عمر هشتادسالۀ خود دستخوش تغییراتی شده است؛ افزون بر این گویی به مرور تحولی در کارکرد این مکان نیز اتفاق افتاده است. به موجب این تغییرات، رفتار افراد حاضر در کوچه نیز تا حدی تغییر کرد. از همان ابتدا برخی مواقع به معبـر &laquo;پاساژ&raquo; گفتند. پاساژ لولاگر در عین شباهت&zwnj;هایی که با پاساژهای اولیه دارد، با آن&zwnj;ها متفاوت است. به نظر می&zwnj;رسد که در ابتدا واژۀ پاساژ را به معنای راهرو و گذر به کار بردند. اما با گذشت زمان، این تلقی از پاساژ تغییر کرد و تا حدودی به پاساژ به مفهوم فضای تجاری نزدیک شـد. با این حال این تلقی نیز پایدار نبود و پس از مدتی دگرباره وجه گذر بودن آن تقویت شد و به مرور زمان &laquo;کوچۀ لولاگر&raquo; جایگزین &laquo;پاساژ لولاگر&raquo; شد.</p>
-<p>&nbsp;</p>
-<p>🔸از این پیوند می&zwnj;توانید از طریق برنامۀ ادوبی کانکت به صورت مهمان در جلسه شرکت کنید:</p>
-<p>http://194.225.24.96/defa-memari-4</p>
-<p>&nbsp;</p>
+  
