--- a/_posts/2021-02-09-bSzY.html
+++ b/_posts/2021-02-09-bSzY.html
@@ -1,26 +1,4 @@
 --- 
-title: "برگزاری سخنرانی مجازی: «اصفهان و استانبول: دیدگاه اروپاییان قبل از سایۀ سنگین شرق‌شناسی»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,اصفهان,استامبول,شرق‌شناسی 
-featured: false
-slug: bSzY 
-excerpt: این گفتگو بر دیدگاه‌های شهری اروپاییان در بارهٔ اصفهان صفوی و استانبول عثمانی در سدهٔ هفدهم تمرکز می‌کند.  
+published: false 
 --- 
-<p><strong>برگزاری سخنرانی مجازی: &laquo;اصفهان و استانبول: دیدگاه اروپاییان قبل از سایۀ سنگین شرق&zwnj;شناسی&raquo;</strong></p>
-<p>میزبان: مرکز مطالعات اسلامی دانشگاه آکسفورد&nbsp;</p>
-<p>سخنران: سوسن بابایی</p>
-<p>زمان: ۱۷ فوریهٔ ۲۰۲۱| ۲۹ بهمن ۱۳۹۹</p>
-<p>&nbsp;</p>
-<p dir="ltr">▪️Isfahan and Istanbul: European views before the long shadow of &lsquo;Orientalism&rsquo;</p>
-<p dir="ltr">Oxford Center for Islamic Studies</p>
-<p dir="ltr">Sussan Babaie| Wednesday, 17 February 2021</p>
-<p>&nbsp;</p>
-<p>این گفتگو بر دیدگاه&zwnj;های شهری اروپاییان در بارهٔ اصفهان صفوی و استانبول عثمانی در سدهٔ هفدهم تمرکز می&zwnj;کند. بیشتر اروپاییان در سده&zwnj;های شانزدهم و هفدهم، آگاهی در&zwnj; بارهٔ این شهر&zwnj;های اصلی جهان اسلام را توسط ژانر مشهور سفرنامه&zwnj;نویسی و وسایل بصری آنها- همچون نقشه&zwnj;ها، نمای&zwnj; شهر&zwnj;ها، تصاویر سبک زندگی، لباس&zwnj;ها و مطالعات فیزیولوژیک- کسب کرده&zwnj;اند. سوسن بابایی پیش&zwnj;نویس معروف معماری تاریخی (Entwurf einer historischen Architektur) را در کتاب مشهور یوهان برنهارد فیشر فن ارلاخ، معماری وینی (۱۷۲۳ - ۱۶۵۶)، نوشته شده است به مثابهٔ نقطه&zwnj;ٔ آغاز در نظر گرفته تا&nbsp; موقعیت فرهنگی نگاه&zwnj;های شهری اروپاییان را با یک نگاه قیاسی جستجو کند و&nbsp; با ردیابی شواهد مادی اروپایی در بارهٔ استانبول و اصفهان به دنبال شناسایی وضع شهری- معماری مخصوص به این دورهٔ مدرن متقدم و متمایز از دیدگاه&zwnj;های شرق&zwnj;شناسانه و استعماری سده&zwnj;های هجدهم و نوزدهم است.</p>
-<p>&nbsp;</p>
-<p>سوسن بابایی استاد موسسهٔ هنر کورتالد است. او در ایران به دنیا آمد. او در پردیس هنر&zwnj;های زیبای دانشگاه تهران در رشته&zwnj;ی گرافیک تحصیل کرد و در سال ۱۳۵۷ برای تحصیل در مقطع ارشد در رشتهٔ هنر&zwnj;های آمریکایی&zwnj;ها و رنسانس ایتالیایی به آمریکا مهاجرت کرد. پس از مقطع ارشد، او در موسسهٔ هنر&zwnj;های زیبای دانشگاه نیویورک مقطع دکتری را گذراند؛ جایی که او بر هنر&zwnj;های اسلام تمرکز کرد. او سال&zwnj;ها در کالج اسمیت و دانشگاه میشیگان در آمریکا و همچنین به عنوان استاد میهمان در موسسهٔ تاریخ هنر (Institut f&uuml;r Kunstgeschichte) و دانشگاه لودیگ ماکسیمیلیان (Ludwig Maximilian University) در مونیخ تدریس کرده است. او در هیئت مشورتی بین&zwnj;المللی تاریخ هنر نیز حضور داشته است.</p>
-<p>&nbsp;</p>
-<p>🔸برای ثبت نام به پیوند زیر مراجعه کنید:</p>
-<p dir="ltr"><a href="https://zoom.us/webinar/register/WN__YHX12PiSK6qFjxNLud64Q">https://zoom.us/webinar/register/WN__YHX12PiSK6qFjxNLud64Q</a></p>
-<p>🔸 اطلاعات بیشتر در:</p>
-<p dir="ltr"><a href="https://www.oxcis.ac.uk/events/isfahan-and-istanbul-european-views-the-long-shadow-of-orientalism">https://www.oxcis.ac.uk/events/isfahan-and-istanbul-european-views-the-long-shadow-of-orientalism</a></p>
+  
