--- a/_posts/2021-07-18-ehXS.html
+++ b/_posts/2021-07-18-ehXS.html
@@ -1,16 +1,16 @@
---- 
-title: "ساز زدن بر شیروانی" 
-authors: mqayoomi 
-types: blog 
-tags: زهرا اهری,ارج‌نامه زهرا اهری 
+---
+title: "ساز زدن بر شیروانی"
+authors: mqayoomi
+types: blog
+tags: زهرا اهری,ارج‌نامه زهرا اهری
 featured: false
-slug: ehXS 
-gallery: 
-- image_path: "/assets/img/posts/ehXS-1.jfif" 
-  title: "" 
- 
-excerpt: «ویولن‌زنی بر بام! انگار عجیب است؛ نه؟ اما توی اینجا، توی دهِ کوچک آناتِوکا، می‌شود گفت هر کدام از ما ویولن‌زنی ‏روی بام است که سعی می‌کند هم آهنگی زیبا و ساده بزند و هم از بام هم نیفتد. آسان نیست. لابد می‌گویید: حالا که ‏ماندن در آن ده این‌قدر خطرناک است، چرا از آنجا نمی‌روید؟ خوب، اینجا می‌مانیم چون خانه‌مان است.» یوزف ‏استِین، ویولن‌زن روی بام (فیلم‌نامه) 
---- 
+slug: ehXS
+gallery:
+- image_path: "/assets/img/posts/ehXS-1.jfif"
+  title: ""
+
+excerpt: "«ویولن‌زنی بر بام! انگار عجیب است؛ نه؟ اما توی اینجا، توی دهِ کوچک آناتِوکا، می‌شود گفت هر کدام از ما ویولن‌زنی ‏روی بام است که سعی می‌کند هم آهنگی زیبا و ساده بزند و هم از بام هم نیفتد. آسان نیست. لابد می‌گویید: حالا که ‏ماندن در آن ده این‌قدر خطرناک است، چرا از آنجا نمی‌روید؟ خوب، اینجا می‌مانیم چون خانه‌مان است.» یوزف ‏استِین، ویولن‌زن روی بام (فیلم‌نامه) "
+---
 <p>تقدیم به زهرا اهری</p>
 <p style="padding-right: 40px;">&laquo;ویولن&zwnj;زنی بر بام! انگار عجیب است؛ نه؟ اما توی اینجا، توی دهِ کوچک آناتِوکا، می&zwnj;شود گفت هر کدام از ما ویولن&zwnj;زنی &rlm;روی بام است که سعی می&zwnj;کند هم آهنگی زیبا و ساده بزند و هم از بام هم نیفتد. آسان نیست. لابد می&zwnj;گویید: حالا که &rlm;ماندن در آن ده این&zwnj;قدر خطرناک است، چرا از آنجا نمی&zwnj;روید؟ خوب، اینجا می&zwnj;مانیم چون خانه&zwnj;مان است.&raquo;</p>
 <p style="text-align: left;">یوزف &rlm;استِین، ویولن&zwnj;زن روی بام (فیلم&zwnj;نامه) &lrm;(Josef Stein, Fiddler on the Roof, 1964.)&zwnj;&rlm;.&rlm;</p>
